--- a/index.html
+++ b/index.html
@@ -437,20 +437,20 @@
 			</section>
 
 			<section id="credits">
-				<div class="flex justify-center py-5">
-					<span class="bg-emerald-100 text-emerald-600 border-2 border-emerald-400 rounded-2xl inline-flex items-center px-5 py-2 me-2">
+				<div class="md:flex gap-3 justify-center align-items-center px-5 py-5">
+					<p class="bg-emerald-100 text-emerald-600 text-sm md:text-md border-2 border-emerald-400 rounded-xl inline-flex items-center px-5 py-2 me-2 mb-3 md:mb-0">
 						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 me-4">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
 						</svg>
 						Muhammad Ammar Afif
-					</span>
-					<span class="bg-emerald-100 text-emerald-600 border-2 border-emerald-400 rounded-2xl inline-flex items-center px-5 py-2 me-2">
+					</p>
+					<p class="bg-emerald-100 text-emerald-600 text-sm md:text-md border-2 border-emerald-400 rounded-xl inline-flex items-center px-5 py-2 me-2 mb-3 md:mb-0">
 						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 me-4">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 0 0 2.25-2.25V6.75A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25v10.5A2.25 2.25 0 0 0 4.5 19.5Z" />
 						</svg>
 						Informatika 02
-					</span>
-					<span class="bg-emerald-100 text-emerald-600 border-2 border-emerald-400 rounded-2xl inline-flex items-center px-5 py-2 me-2">
+					</p>
+					<p class="bg-emerald-100 text-emerald-600 text-sm md:text-md border-2 border-emerald-400 rounded-xl inline-flex items-center px-5 py-2 me-2 mb-3 md:mb-0">
 						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 me-4">
 							<path
 								stroke-linecap="round"
@@ -459,7 +459,7 @@
 							/>
 						</svg>
 						21.11.3927
-					</span>
+					</p>
 				</div>
 			</section>
 		</main>
