refactor: name of mentor

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							</a>
 							<div class="">
 								<a href="#">
-									<h5 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Afra Nur Lathifah</h5>
+									<h5 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Deni Wijaya</h5>
 								</a>
 								<div class="flex items-center text-center py-2">
 									<svg class="w-4 h-4 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
@@ -337,7 +337,7 @@
 							</a>
 							<div class="">
 								<a href="#">
-									<h5 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Afra Nur Lathifah</h5>
+									<h5 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Rojan Syaifuddin</h5>
 								</a>
 								<div class="flex items-center text-center py-2">
 									<svg class="w-4 h-4 text-yellow-300 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
