feat: add meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 		<title>Grow UP - Platform Konsultasi Bisnis UMKM</title>
 
+		<!-- Meta tags untuk SEO -->
+		<meta name="title" content="Grow UP - Platform Konsultasi Bisnis UMKM" />
+		<meta name="description" content="Grow UP adalah platform konsultasi bisnis untuk UMKM yang menyediakan berbagai layanan untuk membantu bisnis Anda berkembang." />
+		<meta name="keywords" content="Grow UP, konsultasi bisnis, UMKM, pengembangan bisnis, startup, bisnis kecil" />
+		<meta name="author" content="Muhammad Ammar Afif" />
+
+		<!-- Meta tags untuk Open Graph (Facebook, LinkedIn, dll.) -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.growth.kodati.xyz" />
+		<meta property="og:title" content="Grow UP - Platform Konsultasi Bisnis UMKM" />
+		<meta property="og:description" content="Grow UP adalah platform konsultasi bisnis untuk UMKM yang menyediakan berbagai layanan untuk membantu bisnis Anda berkembang." />
+		<meta property="og:image" content="https://www.growth.kodati.xyz/assets/img/logo.png" />
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-329TYRJKT4"></script>
 		<script>
