--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet" />
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 		<title>Grow UP - Platform Konsultasi Bisnis UMKM</title>
 
@@ -384,10 +384,87 @@
 				</div>
 			</section>
 
-			<section id="faq" class="bg-emerald-50 min-h-[600px] px-3 md:px-20">
+			<section id="achievement" class="bg-emerald-50 flex flex-col px-4 md:px-20 lg:pb-20">
+				<div class="row mx-auto max-w-screen-sm lg:py-20">
+					<h2 class="mb-4 text-2xl md:text-4xl tracking-tight font-extrabold text-emerald-900">
+						<span class="border-0 border-b-4 border-b-yellow-400">Pencapaian</span>
+						yang Kami Raih
+					</h2>
+					<!-- <p class="font-light text-gray-500 sm:text-xl">Explore the whole collection of open-source web components and elements built with the utility classes from Tailwind</p> -->
+				</div>
+				<br />
+
+				<div class="row flex flex-col-reverse lg:flex-row items-center justify-center mx-auto max-w-screen-xl w-full">
+					<div class="flex flex-wrap gap-4 items-center justify-center">
+						<div class="bg-white shadow-xl px-4 md:px-8 w-full md:w-3/4 lg:w-2/4 py-4 rounded-xl flex items-center gap-3">
+							<div class="flex justify-center items-center w-10 h-10 rounded-lg bg-emerald-100 lg:h-12 lg:w-12">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-emerald-600 lg:w-6 lg:h-6">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5"
+									/>
+								</svg>
+							</div>
+							<div class="justify-between items-center">
+								<h3 class="text-lg font-bold text-gray-800">300</h3>
+								<p class="text-gray-400">Mentor</p>
+							</div>
+						</div>
+
+						<div class="bg-white shadow-xl px-4 md:px-8 w-full md:w-2/4 lg:w-2/4 py-4 rounded-xl flex items-center gap-3">
+							<div class="flex justify-center items-center w-10 h-10 rounded-lg bg-yellow-100 lg:h-12 lg:w-12">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-yellow-600 lg:w-6 lg:h-6">
+									<path stroke-linecap="round" stroke-linejoin="round" d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z" />
+								</svg>
+							</div>
+							<div class="justify-between items-center">
+								<h3 class="text-lg font-bold text-gray-800">10.000+</h3>
+								<p class="text-gray-400">Video</p>
+							</div>
+						</div>
+
+						<div class="bg-white shadow-xl px-4 md:px-8 w-full md:w-2/4 lg:w-2/4 py-4 rounded-xl flex items-center gap-3">
+							<div class="flex justify-center items-center w-10 h-10 rounded-lg bg-blue-100 lg:h-12 lg:w-12">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-blue-600 lg:w-6 lg:h-6">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.058 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z"
+									/>
+								</svg>
+							</div>
+							<div class="justify-between items-center">
+								<h3 class="text-lg font-bold text-gray-800">12.000+</h3>
+								<p class="text-gray-400">Pengguna Aktif</p>
+							</div>
+						</div>
+						<div class="bg-white shadow-xl px-4 md:px-8 w-full md:w-2/4 lg:w-2/4 py-4 rounded-xl flex items-center gap-3">
+							<div class="flex justify-center items-center w-10 h-10 rounded-lg bg-red-100 lg:h-12 lg:w-12">
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-red-600 lg:w-6 lg:h-6">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5"
+									/>
+								</svg>
+							</div>
+							<div class="justify-between items-center">
+								<h3 class="text-lg font-bold text-gray-800">20.000+</h3>
+								<p class="text-gray-400">Pendaftar</p>
+							</div>
+						</div>
+					</div>
+					<div class="w-full md:w-1/2 hidden lg:block animate__animated animate__slideInRight">
+						<img src="./assets/img/image-achieve.png" class="w-[500px]" alt="card-jumbotron" />
+					</div>
+				</div>
+			</section>
+
+			<section id="faq" class="min-h-[600px] px-3 md:px-20">
 				<div class="py-8 mx-auto sm:py-16 lg:px-16">
 					<h2 class="mb-8 text-2xl md:text-4xl text-center tracking-tight font-extrabold text-emerald-900">Pertanyaan Yang Sering Ditanyakan</h2>
-					<div class="faq-wrapper w-full px-4 text-left md:w-3/4 mx-auto">
+					<div class="faq-wrapper w-full px-4 text-left md:w-4/5 mx-auto">
 						<div id="accordion-flush" data-accordion="collapse" data-active-classes="text-emerald-600 font-bold" data-inactive-classes="text-gray-500 font-medium">
 							<h2 id="accordion-flush-heading-1">
 								<button type="button" class="flex items-center justify-between w-full py-5 font-medium text-gray-500 border-b border-gray-200 gap-3" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
@@ -399,17 +476,12 @@
 							</h2>
 							<div id="accordion-flush-body-1" class="hidden" aria-labelledby="accordion-flush-heading-1">
 								<div class="py-5 border-b border-gray-200">
-									<p class="mb-2 text-gray-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt laborum consequatur minima, illum consequuntur at exercitationem alias et provident tempore?</p>
-									<p class="text-gray-500">
-										Check out this guide to learn how to
-										<a href="/docs/getting-started/introduction/" class="text-blue-600 dark:text-blue-500 hover:underline">get started</a>
-										and start developing websites even faster with components on top of Tailwind CSS.
-									</p>
+									<p class="mb-2 text-gray-500">GrowUP adalah layanan konsultasi bisnis yang berfokus pada pertumbuhan dan pengembangan bisnis Anda. Kami menyediakan solusi yang disesuaikan dengan kebutuhan unik bisnis Anda, mulai dari strategi pemasaran, pengembangan produk, hingga manajemen operasional.</p>
 								</div>
 							</div>
 							<h2 id="accordion-flush-heading-2">
 								<button type="button" class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 gap-3" data-accordion-target="#accordion-flush-body-2" aria-expanded="false" aria-controls="accordion-flush-body-2">
-									<span class="text-left">Bagaimana Sistem Konsultasi di GrowUP?</span>
+									<span class="text-left">Bagaimana GrowUP berbeda dari layanan konsultasi lainnya?</span>
 									<svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
 										<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5" />
 									</svg>
@@ -417,12 +489,7 @@
 							</h2>
 							<div id="accordion-flush-body-2" class="hidden" aria-labelledby="accordion-flush-heading-2">
 								<div class="py-5 border-b border-gray-200">
-									<p class="mb-2 text-gray-500">Flowbite is first conceptualized and designed using the Figma software so everything you see in the library has a design equivalent in our Figma file.</p>
-									<p class="text-gray-500">
-										Check out the
-										<a href="https://flowbite.com/figma/" class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a>
-										based on the utility classes from Tailwind CSS and components from Flowbite.
-									</p>
+									<p class="mb-2 text-gray-500">Kami memiliki pendekatan yang inklusif dan kolaboratif. Kami tidak hanya memberikan saran, tetapi juga bekerja sama dengan Anda sebagai mitra untuk mencapai kesuksesan bersama. Kami memahami bahwa setiap bisnis memiliki tantangan dan kebutuhan yang berbeda, oleh karena itu kami menyediakan solusi yang disesuaikan secara khusus.</p>
 								</div>
 							</div>
 							<h2 id="accordion-flush-heading-3">
@@ -435,13 +502,7 @@
 							</h2>
 							<div id="accordion-flush-body-3" class="hidden" aria-labelledby="accordion-flush-heading-3">
 								<div class="py-5 border-b border-gray-200">
-									<p class="mb-2 text-gray-500">The main difference is that the core components from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
-									<p class="mb-2 text-gray-500">However, we actually recommend using both Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of two worlds.</p>
-									<p class="mb-2 text-gray-500">Learn more about these technologies:</p>
-									<ul class="ps-5 text-gray-500 list-disc">
-										<li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
-										<li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-									</ul>
+									<p class="mb-2 text-gray-500">Kamu bisa mendaftarkan diri kamu terlebih dahulu lalu kamu dapat memilih kategori mentoring apa yang kamu inginkan dan pilih mentor terbaik untuk bisnis kamu. Setelah memilih mentor kamu diharuskan untuk melakukan pembayaran sesuai dengan nominal yang terera lalu kamu bisa segera berkonsultasi dengan mentor. Segampang itu semudah itu!</p>
 								</div>
 							</div>
 						</div>
@@ -476,18 +537,18 @@
 				</div>
 			</section>
 		</main>
-		<footer class="bg-emerald-500 px-8 md:px-20 py-12 md:py-16">
+		<footer class="bg-emerald-100 px-8 md:px-20 py-12 md:py-16">
 			<div class="mx-auto max-w-screen-xl">
 				<div class="md:flex md:justify-between">
 					<div class="mb-6 md:mb-0">
-						<a href="https://flowbite.com" class="flex items-center">
+						<a href="/" class="flex items-center">
 							<img src="./assets/img/logo.png" class="mr-3 h-24" alt="FlowBite Logo" />
 						</a>
 					</div>
 					<div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
 						<div>
-							<h2 class="mb-6 text-sm font-extrabold text-emerald-50 uppercase">Resources</h2>
-							<ul class="text-emerald-200">
+							<h2 class="mb-6 text-sm font-extrabold text-emerald-700 uppercase">Resources</h2>
+							<ul class="text-emerald-500">
 								<li class="mb-4">
 									<a href="https://flowbite.com" class="hover:underline">Flowbite</a>
 								</li>
@@ -497,24 +558,24 @@
 							</ul>
 						</div>
 						<div>
-							<h2 class="mb-6 text-sm font-extrabold text-emerald-50 uppercase">Media</h2>
-							<ul class="text-emerald-200">
+							<h2 class="mb-6 text-sm font-extrabold text-emerald-700 uppercase">Media</h2>
+							<ul class="text-emerald-500">
 								<li class="mb-4">
-									<a href="https://github.com/themesberg/flowbite" class="hover:underline">Github</a>
+									<a href="https://github.com/amarafiif" class="hover:underline">Github</a>
 								</li>
 								<li>
-									<a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
+									<a href="https://instagram.com/amarafiif" class="hover:underline">Instagram</a>
 								</li>
 							</ul>
 						</div>
 						<div>
-							<h2 class="mb-6 text-sm font-extrabold text-emerald-50 uppercase">Legalitas</h2>
-							<ul class="text-emerald-200">
+							<h2 class="mb-6 text-sm font-extrabold text-emerald-700 uppercase">Legalitas</h2>
+							<ul class="text-emerald-500">
 								<li class="mb-4">
-									<a href="#" class="hover:underline">Kebijakan</a>
+									<a href="/" class="hover:underline">Kebijakan</a>
 								</li>
 								<li>
-									<a href="#" class="hover:underline">Izin Pendirian</a>
+									<a href="/" class="hover:underline">Izin Pendirian</a>
 								</li>
 							</ul>
 						</div>
@@ -522,18 +583,18 @@
 				</div>
 				<hr class="my-6 border-yellow-50 sm:mx-auto lg:my-8" />
 				<div class="sm:flex sm:items-center sm:justify-between text-center">
-					<span class="text-sm text-emerald-100 text-center">
+					<span class="text-sm text-emerald-700 text-center">
 						© 2024
 						<a href="https://flowbite.com" class="hover:underline">GrowUP</a>
 						. All Rights Reserved.
 					</span>
 					<div class="flex justify-center mt-4 space-x-6 sm:mt-0">
-						<a href="#" class="text-emerald-100 hover:text-emerald-600">
+						<a href="#" class="text-emerald-500 hover:text-emerald-700">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
 							</svg>
 						</a>
-						<a href="#" class="text-emerald-100 hover:text-emerald-600">
+						<a href="#" class="text-emerald-500 hover:text-emerald-700">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path
 									fill-rule="evenodd"
@@ -542,12 +603,12 @@
 								/>
 							</svg>
 						</a>
-						<a href="#" class="text-emerald-100 hover:text-emerald-600">
+						<a href="#" class="text-emerald-500 hover:text-emerald-700">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
 							</svg>
 						</a>
-						<a href="#" class="text-emerald-100 hover:text-emerald-600">
+						<a href="#" class="text-emerald-500 hover:text-emerald-700">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path
 									fill-rule="evenodd"
@@ -556,7 +617,7 @@
 								/>
 							</svg>
 						</a>
-						<a href="#" class="text-emerald-100 hover:text-emerald-600">
+						<a href="#" class="text-emerald-500 hover:text-emerald-700">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path
 									fill-rule="evenodd"
