--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<meta property="og:url" content="https://www.growth.kodati.xyz" />
 		<meta property="og:title" content="Grow UP - Platform Konsultasi Bisnis UMKM" />
 		<meta property="og:description" content="Grow UP adalah platform konsultasi bisnis untuk UMKM yang menyediakan berbagai layanan untuk membantu bisnis Anda berkembang." />
-		<meta property="og:image" content="https://www.growth.kodati.xyz/assets/img/logo.png" />
+		<meta property="og:image" content="https://www.growth.kodati.xyz/assets/img/logo.webp" />
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-329TYRJKT4"></script>
@@ -50,7 +50,7 @@
 			<nav class="bg-white border border-gray-200 px-8 md:px-20 py-3">
 				<div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
 					<a href="https://growth.kodati.xyz" class="flex items-center" aria-label="logo-site">
-						<img src="./assets/img/logo.png" class="mr-3 w-[100px] md:w-[140px]" alt="GrowthUp Logo" />
+						<img src="./assets/img/logo.webp" class="mr-3 w-[100px] md:w-[140px]" alt="GrowthUp Logo" />
 						<!-- <span class="text-xl font-extrabold text-emerald-700">
 							Grow
 							<span class="text-yellow-700 italic">UP</span>
@@ -121,7 +121,7 @@
 						</a>
 					</div>
 					<div class="w-full md:w-1/2 hidden lg:block animate__animated animate__slideInRight">
-						<img src="./assets/img/jumbotron.png" class="w-[650px]" alt="card-jumbotron" />
+						<img src="./assets/img/jumbotron.webp" class="w-[650px]" alt="card-jumbotron" />
 					</div>
 				</div>
 			</section>
@@ -237,7 +237,7 @@
 					<div class="flex flex-col md:flex-row gap-8">
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
 							<a href="#" aria-label="link-thumbnail-mentor">
-								<img class="" src="./assets/img/iwbe.png" alt="" />
+								<img class="" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
 								<a href="#" aria-label="link-mentor">
@@ -274,7 +274,7 @@
 						</div>
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
 							<a href="#" aria-label="link-thumbnail-mentor">
-								<img class="rounded-lg" src="./assets/img/iwbe.png" alt="" />
+								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
 								<a href="#" aria-label="link-mentor">
@@ -310,7 +310,7 @@
 						</div>
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
 							<a href="#" aria-label="link-thumbnail-mentor">
-								<img class="rounded-lg" src="./assets/img/iwbe.png" alt="" />
+								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
 								<a href="#" aria-label="link-mentor">
@@ -346,7 +346,7 @@
 						</div>
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
 							<a href="#" aria-label="link-thumbnail-mentor">
-								<img class="rounded-lg" src="./assets/img/iwbe.png" alt="" />
+								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
 								<a href="#" aria-label="link-mentor">
@@ -456,7 +456,7 @@
 						</div>
 					</div>
 					<div class="w-full md:w-1/2 hidden lg:block animate__animated animate__slideInRight">
-						<img src="./assets/img/image-achieve.png" class="w-[700px]" alt="card-jumbotron" />
+						<img src="./assets/img/image-achieve.webp" class="w-[700px]" alt="card-jumbotron" />
 					</div>
 				</div>
 			</section>
@@ -542,7 +542,7 @@
 				<div class="md:flex md:justify-between">
 					<div class="mb-6 md:mb-0">
 						<a href="/" class="flex items-center" aria-label="logo-site">
-							<img src="./assets/img/logo.png" class="mr-3 h-24" alt="logo-site" />
+							<img src="./assets/img/logo.webp" class="mr-3 h-24" alt="logo-site" />
 						</a>
 					</div>
 					<div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
