refactor: link to instagram every a href. belum semua

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 		<!-- Meta tags untuk Open Graph (Facebook, LinkedIn, dll.) -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.growth.kodati.xyz" />
+		<meta property="og:url" content="https://growth.kodati.xyz" />
 		<meta property="og:title" content="Grow UP - Platform Konsultasi Bisnis UMKM" />
 		<meta property="og:description" content="Grow UP adalah platform konsultasi bisnis untuk UMKM yang menyediakan berbagai layanan untuk membantu bisnis Anda berkembang." />
-		<meta property="og:image" content="https://www.growth.kodati.xyz/assets/img/logo.webp" />
+		<meta property="og:image" content="https://growth.kodati.xyz/assets/img/logo.webp" />
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-329TYRJKT4"></script>
@@ -56,7 +56,7 @@
 						</span> -->
 					</a>
 					<div class="flex items-center lg:order-2">
-						<a href="#" class="text-white bg-emerald-700 hover:bg-emerald-600 focus:ring-4 focus:ring-emerald-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 focus:outline-none" aria-label="cta-signup">Daftar</a>
+						<a href="https://instagram.com/amarafiif" class="text-white bg-emerald-700 hover:bg-emerald-600 focus:ring-4 focus:ring-emerald-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 focus:outline-none" aria-label="cta-signup">Daftar</a>
 						<button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-700 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="mobile-menu-2" aria-expanded="false">
 							<span class="sr-only">Open main menu</span>
 							<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -70,19 +70,19 @@
 					<div class="hidden w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
 						<ul class="flex flex-col mt-4 font-medium text-sm lg:flex-row lg:space-x-8 lg:mt-0">
 							<li>
-								<a href="#" class="block py-2 pr-4 pl-3 text-emerald-700 rounded bg-emerald-100 text-emerald-700 lg:bg-transparent lg:text-emerald-700 lg:p-0" aria-current="page" aria-label="menu-navigation">Home</a>
+								<a href="https://instagram.com/amarafiif" class="block py-2 pr-4 pl-3 text-emerald-700 rounded bg-emerald-100 text-emerald-700 lg:bg-transparent lg:text-emerald-700 lg:p-0" aria-current="page" aria-label="menu-navigation">Home</a>
 							</li>
 							<li>
-								<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Kategori</a>
+								<a href="https://instagram.com/amarafiif" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Kategori</a>
 							</li>
 							<li>
-								<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Blog</a>
+								<a href="https://instagram.com/amarafiif" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Blog</a>
 							</li>
 							<li>
-								<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Tentang</a>
+								<a href="https://instagram.com/amarafiif" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Tentang</a>
 							</li>
 							<li>
-								<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Contact</a>
+								<a href="https://instagram.com/amarafiif" class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-emerald-700 lg:p-0" aria-label="menu-navigation">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -144,7 +144,7 @@
 							</div>
 							<div class="flex-1 flex justify-between items-center">
 								<h3 class="text-lg font-bold text-gray-800">Dasar Bisnis</h3>
-								<a href="#" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
+								<a href="https://instagram.com/amarafiif" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
 										<path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 									</svg>
@@ -163,7 +163,7 @@
 							</div>
 							<div class="flex-1 flex justify-between items-center">
 								<h3 class="text-lg font-bold text-gray-800">Pemasaran</h3>
-								<a href="#" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
+								<a href="https://instagram.com/amarafiif" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
 										<path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 									</svg>
@@ -178,7 +178,7 @@
 							</div>
 							<div class="flex-1 flex justify-between items-center">
 								<h3 class="text-lg font-bold text-gray-800">Legalitas</h3>
-								<a href="#" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
+								<a href="https://instagram.com/amarafiif" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
 										<path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 									</svg>
@@ -197,7 +197,7 @@
 							</div>
 							<div class="flex-1 flex justify-between items-center">
 								<h3 class="text-lg font-bold text-gray-800">Keuangan</h3>
-								<a href="#" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
+								<a href="https://instagram.com/amarafiif" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
 										<path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 									</svg>
@@ -212,7 +212,7 @@
 							</div>
 							<div class="flex-1 flex justify-between items-center">
 								<h3 class="text-lg font-bold text-gray-800">Kemasan</h3>
-								<a href="#" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
+								<a href="https://instagram.com/amarafiif" class="flex items-center justify-center text-emerald-700" aria-label="link-category">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
 										<path stroke-linecap="round" stroke-linejoin="round" d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25" />
 									</svg>
@@ -235,11 +235,11 @@
 					</div>
 					<div class="flex flex-col md:flex-row gap-8">
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
-							<a href="#" aria-label="link-thumbnail-mentor">
+							<a href="https://instagram.com/amarafiif" aria-label="link-thumbnail-mentor">
 								<img class="" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
-								<a href="#" aria-label="link-mentor">
+								<a href="https://instagram.com/amarafiif" aria-label="link-mentor">
 									<h3 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Muhammad Ammar Afif</h3>
 								</a>
 								<div class="flex items-center text-center py-2">
@@ -263,7 +263,7 @@
 								<!-- <hr class="my-2" /> -->
 								<div class="flex items-center justify-between">
 									<h4 class="font-extrabold text-lg">Rp.50.000</h4>
-									<a href="#" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
+									<a href="https://instagram.com/amarafiif" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 											<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
 										</svg>
@@ -276,7 +276,7 @@
 								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
-								<a href="#" aria-label="link-mentor">
+								<a href="https://instagram.com/amarafiif" aria-label="link-mentor">
 									<h3 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Busi Ratna Sari</h3>
 								</a>
 								<div class="flex items-center text-center py-2">
@@ -299,7 +299,7 @@
 								</div>
 								<div class="flex items-center justify-between">
 									<h4 class="font-extrabold text-lg">Rp.70.000</h4>
-									<a href="#" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
+									<a href="https://instagram.com/amarafiif" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 											<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
 										</svg>
@@ -308,11 +308,11 @@
 							</div>
 						</div>
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
-							<a href="#" aria-label="link-thumbnail-mentor">
+							<a href="https://instagram.com/amarafiif" aria-label="link-thumbnail-mentor">
 								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
-								<a href="#" aria-label="link-mentor">
+								<a href="https://instagram.com/amarafiif" aria-label="link-mentor">
 									<h3 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Deni Wijaya</h3>
 								</a>
 								<div class="flex items-center text-center py-2">
@@ -335,7 +335,7 @@
 								</div>
 								<div class="flex items-center justify-between">
 									<h4 class="font-extrabold text-lg">Rp.70.000</h4>
-									<a href="#" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
+									<a href="https://instagram.com/amarafiif" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 											<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
 										</svg>
@@ -344,11 +344,11 @@
 							</div>
 						</div>
 						<div class="bg-white border border-2 border-gray-200 rounded-2xl lg:w-1/4 p-3">
-							<a href="#" aria-label="link-thumbnail-mentor">
+							<a href="https://instagram.com/amarafiif" aria-label="link-thumbnail-mentor">
 								<img class="rounded-lg" src="./assets/img/iwbe.webp" alt="" />
 							</a>
 							<div class="">
-								<a href="#" aria-label="link-mentor">
+								<a href="https://instagram.com/amarafiif" aria-label="link-mentor">
 									<h3 class="text-xl lg:text-lg mt-3 font-bold tracking-tight text-left text-gray-900">Rojan Syaifuddin</h3>
 								</a>
 								<div class="flex items-center text-center py-2">
@@ -371,7 +371,7 @@
 								</div>
 								<div class="flex items-center justify-between">
 									<h4 class="font-extrabold text-lg">Rp.70.000</h4>
-									<a href="#" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
+									<a href="https://instagram.com/amarafiif" class="flex items-center text-sm font-medium text-emerald-700 bg-emerald-50 p-2 rounded-lg hover:bg-yellow-50 hover:text-yellow-700" aria-label="link-cta">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 											<path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
 										</svg>
